# mimo-tui

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
npm/: package.json  postinstall.js
src/: api.rs  config.rs  constitution.rs  git.rs  highlight.rs  lsp.rs  main.rs  mcp.rs  session.rs  setup.rs  subagent.rs  tools.rs  tui.rs
